--- a/application/views/admin/user/new.phtml
+++ b/application/views/admin/user/new.phtml
@@ -237,7 +237,7 @@
                             <table width="100%">
                                 <tr>
                                     <td width="175" align="right">
-                                        <label name="sipassword_costte">Password Cost</label>
+                                        <label name="password_cost">Password Cost</label>
                                         <div name="password_cost" class="tiny error" style="display: none;"></div>
                                     </td>
                                     <td width="10"></td>
